2005-06-27 Alain Magloire
	Refactor the class extending CLICommand to CLIXXXX for more clarity.
	Pass the MIVersion in all of the class extending MICommand, this is
	necessary some command option will not be accepted depending on the version.
	Too much file to enumerate.
	* ...

2005-06-25 Alain Magloire
	We should consider a "^done" like a suspended only for CLICommands, for example:
	(gdb) run
	^done
	(gdb)
	* mi/org/eclipse/cdt/debug/mi/core/RxThread.java

2005-06-06 Alain Magloire
	Fix PR 98182
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/LocationBreakpoint.java

2005-05-25 Alain Magloire
	Fix PR 95705
	* mi/org/eclipse/cdt/debug/mi/core/output/MIInfoSharedLibraryInfo.java

2005-05-16 Alain Magloire
	Fix PR 91975
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java

2005-05-12 Alain Magloire
	Fix PR 94841
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Variable.java

2005-04-28 Alain Magloire
	Added command -gdb-show endian
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java
	* mi/org/eclipse/cdt/debug/mi/core/command/CommandFactory.java
	+ mi/org/eclipse/cdt/debug/mi/core/command/MIGDBShowEndian.java
	- mi/org/eclipse/cdt/debug/mi/core/command/MIShowEndian.java
	+ mi/org/eclipse/cdt/debug/mi/core/output/MIGDBShowEndianInfo.java
	- mi/org/eclipse/cdt/debug/mi/core/output/MIGDBShowEndian.java

2005-04-27 Alain Magloire
	Changes in the CDI interface
	* cdi/org/eclipse/cdt/debug/core/cdi/model/BreakpointManager.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/Session.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/SourceManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java
	* mi/org/eclipse/cdt/debug/mi/core/command/CommandFactory.java
	* mi/org/eclipse/cdt/debug/mi/core/command/MIEnvrionmentDirectory.java
	* src/org/eclipse/cdt/debug/mi/core/CygwinCommandfactory.java
	* src/org/eclipse/cdt/debug/mi/core/CygwinMIEnvironmentDirectory.java

2005-04-25 Alain Magloire